cv-lab/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retail-supermarket-grocery-cv
  labels:
    app.kubernetes.io/part-of: retail-supermarket-grocery-cv-lab
